--- a/Страница1.md
+++ b/Страница1.md
@@ -23,6 +23,12 @@ git checkout
 3 при помощи команды 
 git checkout master.
 
+ git diff 
+ 
+Показывает разницу между текущим файлом 
+и сохранённым. Перед переключением версии файла в git  используйте команду git log, чтобы увидеть 
+количество сохранений.
+
 
 
 
