--- a/Страница1.md
+++ b/Страница1.md
@@ -29,6 +29,12 @@ git checkout master.
 и сохранённым. Перед переключением версии файла в git  используйте команду git log, чтобы увидеть 
 количество сохранений.
 
+git branch команда для вывода списка веток в репозитории
+
+git branch new_branch_name
+
+с помощью этой команды создаем новую ветку с именем new_branch_name
+
 
 
 
