Добавили checkout и graph

--- a/Страница1.md
+++ b/Страница1.md
@@ -29,6 +29,9 @@ git checkout master.
 и сохранённым. Перед переключением версии файла в git  используйте команду git log, чтобы увидеть 
 количество сохранений.
 
+_git checkout branch_name осуществляется переход на ветку branch_name_
+
+**git log –graph выыводится список коммитов в виде красивого графа/дерева**
 
 
 
