--- a/Страница1.md
+++ b/Страница1.md
@@ -35,6 +35,6 @@ git branch new_branch_name
 
 с помощью этой команды создаем новую ветку с именем new_branch_name
 
-
+git merge branch_name эта команда служит для того, чтобы слить ветку branch_name с текущей веткой  
 
 
