--- a/Страница1.md
+++ b/Страница1.md
@@ -37,4 +37,7 @@ git branch new_branch_name
 
 git merge branch_name эта команда служит для того, чтобы слить ветку branch_name с текущей веткой  
 
+Для того чтобы вставить изображение, достаточно написать следующее
+
+![Вид шва](seam.jpg)
 
