--- a/Страница1.md
+++ b/Страница1.md
@@ -37,7 +37,10 @@ git branch new_branch_name
 
 git merge branch_name эта команда служит для того, чтобы слить ветку branch_name с текущей веткой  
 
+Добавили команды git checkout and git graph
+
 Для того чтобы вставить изображение, достаточно написать следующее
 
 ![Вид шва](seam.jpg)
+
 
